feat: busca informacoes de agente por ID
